# pano

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
examples/: 6cubes_to_equirectangular.rs  panorama.rs  panorama_circle.rs  panorama_image_transfer.rs  show_panorama.rs
pano-rs/: Cargo.toml
pano-rs/examples/: 6cubes_to_equirectangular.rs  panorama_circle.rs  panorama_image_transfer.rs  show_panorama.rs
pano-rs/src/: alpha_grid.frag  app.rs  draw_circle.frag  draw_circle.vert  file_io.rs  gen_WebGl2RenderingContext.rs  lib.rs  model.rs  show_panorama.frag  show_panorama.rs  show_panorama.vert  wasm_bind.rs  webgl.rs  webgl_utils.rs  yew_test.rs
pano-rs/src/app/: cubes_to_equirectangular_dialog.rs  image_transfer_dialog.rs  mod.rs
pano-rs/src/experimental/: mod.rs  webxr.rs
pano-rs/src/shaders/: 6cubes_to_equirectangular.frag  all_view.vert  alpha_grid.frag  brush.frag  brush.vert  draw_circle.frag  drawing_canvas.vert  grid.frag  image_transfer.frag  panorama_rotation.frag  show_panorama.frag  show_panorama.vert
src/: dialog.js  electron_on.js  fs.js  index.css  index.html  main.js  package.json  pano.js  preload.js
src/renderer/: app.tsx
