[package]
name = "pano"
version = "0.1.0"
authors = ["masashi yoshikawa"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
