[package]
name = "pano"
version = "0.1.0"
authors = ["masashi yoshikawa"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
# glium = "0.30.2"
image = "0.23"
# rand = "0.8.4"
# palette = "0.6.0"
console_error_panic_hook = "0.1.7"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'WebGlUniformLocation',
  'WebGlTexture',
]
