[package]
name = "pano"
version = "0.1.0"
authors = ["masashi yoshikawa"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
image = "0.23"
palette = "0.6.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.4"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.28"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
yew = "0.18"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.4" }
exr = "1.3.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlDivElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebglColorBufferFloat',
  'Window',
  'WebGlUniformLocation',
  'WebGlTexture',
  'MouseEvent',
  'TouchEvent',
  'Gpu',
  'Headers',
  'Navigator',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebGlActiveInfo',
  'WebGlFramebuffer',
  'Xr',
  'XrBoundedReferenceSpace',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceArray',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrInputSourcesChangeEvent',
  'XrPose',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionInit',
  'XrSessionMode',
  'XrSpace',
  'XrTargetRayMode',
  'XrView',
  'XrViewerPose',
  'XrViewport',
  'XrVisibilityState',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'console'
]
